--- a/tcamt-lite-client/app/dev/index.html
+++ b/tcamt-lite-client/app/dev/index.html
@@ -3,6 +3,7 @@
       lang="en" class="ng-app:tcl" id="ng-app"
         >
 <head>
+    <script async type="text/javascript" id="_fed_an_ua_tag" src="https://dap.digitalgov.gov/Universal-Federated-Analytics-Min.js?agency=DOC&subagency=NIST&pua=UA-xxxxxxxx-x&yt=true&exts=ppsx,pps,f90,sch,rtf,wrl,txz,m1v,xlsm,msi,xsd,f,tif,eps,mpg,xml,pl,xlt,c"></script>
     <meta charset="utf-8">
     <title></title>
 
@@ -16,6 +17,8 @@
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="TCAMT">
     <meta name="author" content="NIST">
+
+
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
