--- a/tcamt-lite-client/app/index.html
+++ b/tcamt-lite-client/app/index.html
@@ -4,6 +4,8 @@
         >
 <head>
     <meta charset="utf-8">
+    <script async type="text/javascript" id="_fed_an_ua_tag" src="https://dap.digitalgov.gov/Universal-Federated-Analytics-Min.js?agency=DOC&subagency=NIST&pua=UA-xxxxxxxx-x&yt=true&exts=ppsx,pps,f90,sch,rtf,wrl,txz,m1v,xlsm,msi,xsd,f,tif,eps,mpg,xml,pl,xlt,c"></script>
+
     <title></title>
 
     <meta name="robots" content="none"/>
